# CurveStudio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  upgrade-cliproxy.sh
.github/workflows/: windows-installer.yml
ctv-macos-mvp/: .gitignore  ACCEPTANCE_CHECKLIST.md  ARCHITECTURE.md  CHANGELOG.md  DESKTOP_APP_PLAN.md  ICC_WORKFLOW_PLAN.md  MVP_SPEC.md  README.md  REFERENCE_SOFTWARE_STUDY.md  REVIEW.md  SDK_INTEGRATION_PLAN.md  index.html  package-lock.json  package.json
ctv-macos-mvp/reference-data/: README.md
ctv-macos-mvp/samples/: ctv-lab-demo.csv  kba-presets.json  kba105-field-record.csv  kba162-field-record.csv  sample-measurements.csv  sml-printspec-audit-example.json  sml-printspec-audit-verification.json  sml-printspec-derived-measurement.csv
ctv-macos-mvp/scripts/: audit-release.mjs  build-dist.mjs  notarize-macos.mjs  run-tests.mjs  serve-static.mjs  validate-importers.mjs  verify-windows-artifacts.mjs
ctv-macos-mvp/src/: analysis-engine.js  app.js  audit-report.js  chart-renderer.js  compensation-simulation.js  curve-acceptance.js  curve-engine.js  curve-overrides.js  desktop-io.js  device-adapter.js  exporter.js  shared.js  (+18 more)
ctv-macos-mvp/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
ctv-macos-mvp/src-tauri/capabilities/: default.json
ctv-macos-mvp/src-tauri/icons/: icon.icns
ctv-macos-mvp/src-tauri/src/: main.rs
docs/: curve-calculation.md  g7-ctv-workflow.md  maintenance-plan.md  roadmap.md
examples/: KBA105_CMYK_measurement.csv  KBA162_CMYK_measurement.csv  README.md  sample_tvi_curve.csv
screenshots/: README.md
(+71 files in other folders)
