[package]
name = "curvestudio"
version = "0.1.11"
description = "TVI / CTV / G7 compensation curve desktop app"
authors = ["FM PRINT"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
hidapi = "2.6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
